# trial13

./: run_tests.bat  run_tests.py  write_test.py
smart_meal_planner_backend/: .env  .pre-commit-config.yaml  README.md  alembic.ini  config.py  database.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  run_checks.py  test.db  write_test.py
smart_meal_planner_backend/.github/workflows/: ci.yml
smart_meal_planner_backend/ai/: routes.py  schemas.py  services.py
smart_meal_planner_backend/alembic/: env.py
smart_meal_planner_backend/alembic/versions/: 164b2b539a69_add_user_relationships.py
smart_meal_planner_backend/api/: routes.py  schemas.py  services.py
smart_meal_planner_backend/auth/: routes.py  schemas.py  utils.py
smart_meal_planner_backend/monitoring/: logger.py  metrics.py  middleware.py  sentry.py
smart_meal_planner_backend/tests/: conftest.py  test_ai.py  test_auth.py  test_inventory.py  test_meal_plan.py  test_recipes.py  test_shopping_list.py
